<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_berat"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_berat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_berat"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_tinggi"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/edt_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_tinggi"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/btn_hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung_Bmi"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>