<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".view.ResultActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_result"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="18dp"
        />

    <TextView
        android:id="@+id/result_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_bmi"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        />

    <TextView
        android:id="@+id/result_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result_kategori"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
    />

    <Button
        android:id="@+id/btn_to_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_pengembang"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
    />

</LinearLayout>